Added a heading and a message into the html file

--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>AntSource</title>
 </head>
+
 <body>
-    
+    <h1>AntSource</h1>
+    <p>Are you not sure about where to eat on or nearby UCI? We'll help you find your anthill!</p>
 </body>
+
 </html>
