--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
 
             <div>
-                <button type="submit">Tell me where I should eat!</button>
+                <button type="submit" id="search">Tell me where I should eat!</button>
             </div>
         </form>
     </section>
