--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AntSource</title>
-    <script> src="script.js"</script>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -40,6 +40,8 @@
             </div>
         </form>
     </section>
+
+    <script> src="script.js"</script>
 </body>
 
 </html>
