--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -9,7 +9,10 @@
 </head>
 
 <body>
-    <h1>AntSource</h1>
+    <header>
+        <h1>AntSource</h1>
+    </header>
+    
     <p>Are you not sure about where to eat on or nearby UCI? We'll help you find your anthill!</p>
     
     <section>
