--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -6,22 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora&family=Raleway&display=swap" rel="stylesheet"> 
     <title>AntSource</title>
 </head>
 
 <body>
-    <section>
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <h1>AntSource</h1>                
-                </div>
-                <div class="col">
-                    <a href=""> Input Form </a>
-                </div>
+    <header>
+        <div class="d-flex justify-content-between align-items-center">
+            <div>
+                <img src="..." alt="...">
             </div>
+            <div class="col text-left">
+                <p style="font-size:35px; font-family:'Raleway',sans-serif;">AntSource</p>
+            </div>
+            <div class="col text-right">
+                <p style="font-size:35px; font-family:'Raleway',sans-serif;">Input Form</p>
+            </div>
+    
         </div>
-    </section>
+    </header>
 
     <section>
         <div class="container text-center mt-5">
