--- a/Frontend/landing.html
+++ b/Frontend/landing.html
@@ -8,15 +8,15 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Lora&family=Raleway&display=swap" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora&family=Raleway&display=swap" rel="stylesheet"> 
 </head>
 
 <header>
     <div class="d-flex justify-content-between align-items-center">
         <div class="col text-left">
-            <p style="font-size:35px; font-family:'Raleway',sans-serif;">asdf</p>
+            <img src="..." alt="...">
         </div>
         <div class="col text-right">
             <p style="font-size:35px; font-family:'Raleway',sans-serif;">Input Form</p>
@@ -47,7 +47,7 @@
     
     <script>
         document.getElementById("anthill").addEventListener("click", function() {
-            var link = "Frontend/index.html";
+            var link = "index.html";
             window.open(link, '_blank');
         });
     </script>
