Changed color and added image to landing page

--- a/Frontend/landing.html
+++ b/Frontend/landing.html
@@ -16,28 +16,28 @@
 <header>
     <div class="d-flex justify-content-between align-items-center">
         <div class="col text-left">
-            <img src="..." alt="...">
+            <img src="C:\Users\jason\Downloads\VS Project Folder\zothacks-2023\ZotHacks2023\Frontend\stuffed_petr.png" width = "100px" height = "100px" alt="Stuffed Petr">
         </div>
         <div class="col text-right">
-            <p style="font-size:35px; font-family:'Raleway',sans-serif;">Input Form</p>
+            <p style="font-size:35px; font-family:'Raleway',sans-serif; color:#EFF2F1;">Input Form</p>
         </div>
 
     </div>
 </header>
 
-<body>
+<body style="background-color:#6B9AC4;">
     <div class="container">
-        <div class="d-flex container vh-100 align-items-center flex-wrap flex-column justify-content-center" style="max-height: 80vh;">
+        <div class="d-flex container vh-100 align-items-center flex-wrap flex-column justify-content-center" style="max-height: 70vh;">
             <div class="row">
-                <h1 class="col-12 text-center" style="font-size: 100px; font-family: 'Lora', serif;">AntSource</h1>
+                <h1 class="col-12 text-center" style="font-size: 100px; font-family: 'Lora', serif; color:#EFF2F1">AntSource</h1>
             </div>
     
             <div class="row">
-                <h5 class="col-12 text-center mt-3" style="font-size: 30px; font-family: 'Raleway', sans-serif;">Not sure where to eat at UCI?</h5>
+                <h5 class="col-12 text-center mt-3" style="font-size: 30px; font-family: 'Raleway', sans-serif;  color:#EFF2F1;">Not sure where to eat at UCI?</h5>
             </div>
     
             <div class="row justify-content-center">
-                <button type="button" id="anthill" class="btn btn-primary btn-lg mt-3" style="font-size: 30px; font-family: 'Lora', serif;">Find your anthill</button>
+                <button type="button" id="anthill" class="btn btn-primary btn-lg mt-3" style="font-size: 30px; font-family: 'Lora', serif; background-color:#F4B942; border-radius:20px;">Find your anthill</button>
             </div>
         </div>
     </div>
