Stylized home page

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -14,17 +14,18 @@
     <title>AntSource</title>
 </head>
 
-<body>
+<body style="background-color:#6B9AC4;">
     <header>
-        <div class="d-flex justify-content-between align-items-center">
-            <div>
-                <img src="..." alt="...">
+        <div class="d-flex align-items-center">
+            <div class="col-1">
+                <p style="font-size:35px; font-family:'Raleway',sans-serif; color:#EFF2F1;">AntSource</p>
             </div>
-            <div class="col text-left">
-                <p style="font-size:35px; font-family:'Raleway',sans-serif;">AntSource</p>
+            <div class="col-5">
+                <img src="C:\Users\jason\Downloads\VS Project Folder\zothacks-2023\ZotHacks2023\Frontend\stuffed_petr.png" width = "100px" height = "100px" alt="Stuffed Petr" >
             </div>
-            <div class="col text-right">
-                <p style="font-size:35px; font-family:'Raleway',sans-serif;">Input Form</p>
+            
+            <div class="col-6 text-right">
+                <p style="font-size:35px; font-family:'Raleway',sans-serif; color:#EFF2F1;">Input Form</p>
             </div>
     
         </div>
@@ -35,16 +36,16 @@
             <div class="row">
                 <div class="col">
                     <div>
-                        <button type="button" class="btn btn-primary" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem; border-radius: 10px"> Surprise Me! </button>
+                        <button type="button" class="btn btn-primary" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem; border-radius: 10px; font-family: 'Raleway', sans-serif; background-color:#F4B942; font-size: 25px"> Surprise Me! </button>
                     </div>
                 </div>
                 <div class="col">
                     <div class="dropdown">
-                        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" style="border-radius: 10px">
+                        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" style="border-radius: 10px; font-family: 'Raleway', sans-serif; font-size: 25px">
                           Location
                         </button>
-                        <ul class="dropdown-menu">
-                          <li><a class="dropdown-item" href="#"> On campus </a></li>
+                        <ul class="dropdown-menu" style="color=#70747c;">
+                          <li ><a class="dropdown-item" href="#"> On campus </a></li>
                           <li><a class="dropdown-item" href="#"> UTC </a></li>
                           <li><a class="dropdown-item" href="#"> Campus Plaza </a></li>
                           <li><a class="dropdown-item" href="#"> Nearby campus </a></li>
@@ -53,7 +54,7 @@
                 </div>
                 <div class="col">
                     <div class="dropdown">
-                        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" style="border-radius: 10px">
+                        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" style="border-radius: 10px; font-family: 'Raleway', sans-serif; font-size: 25px">
                           Pricing
                         </button>
                         <ul class="dropdown-menu">
@@ -65,7 +66,7 @@
                 </div>
                 <div class="col">
                     <div class="dropdown">
-                        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" style="border-radius: 10px">
+                        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" style="border-radius: 10px; font-family: 'Raleway', sans-serif; font-size: 25px">
                           Rating
                         </button>
                         <ul class="dropdown-menu">
@@ -91,11 +92,11 @@
                     <div class="card h-100" style="width: 18rem;  border-radius: 30px">
                         <img src="..." class="card-img-top" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">Title</h5>
-                          <p class="card-rating">Rating</p>
-                          <p class="card-address">Address</p>
-                          <p class="card-price">$$$</p>
-                          <a href="#" class="btn btn-primary">View Map</a>
+                          <h5 class="card-title" style="font-family: 'Lora', serif;">Title</h5>
+                          <p class="card-rating" style="font-family: 'Raleway', sans-serif;">Rating</p>
+                          <p class="card-address" style="font-family: 'Raleway', sans-serif;">Address</p>
+                          <p class="card-price" style="font-family: 'Raleway', sans-serif;">$$$</p>
+                          <a href="#" class="btn btn-primary" style="background-color:#F4B942; font-family: 'Raleway', sans-serif;">View Map</a>
                         </div>
                       </div>
                 </div>
@@ -103,10 +104,10 @@
                     <div class="card h-100" style="width: 18rem; border-radius: 30px">
                         <img src="..." class="card-img-top" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">Featured</h5>
-                          <p class="card-location">Location</p>
-                          <p class="card-food">Food</p>
-                          <p class="card-description">Description............</p>
+                          <h5 class="card-title" style="font-family: 'Lora', serif;">Featured</h5>
+                          <p class="card-location" style="font-family: 'Raleway', sans-serif;">Location</p>
+                          <p class="card-food" style="font-family: 'Raleway', sans-serif;">Food</p>
+                          <p class="card-description" style="font-family: 'Raleway', sans-serif;">Description............</p>
                         </div>
                     </div>
                 </div>
@@ -114,10 +115,10 @@
                     <div class="card h-100" style="width: 18rem; border-radius: 30px">
                         <img src="..." class="card-img-top" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">Featured</h5>
-                          <p class="card-location">Location</p>
-                          <p class="card-food">Food</p>
-                          <p class="card-description">Description............</p>
+                          <h5 class="card-title" style="font-family: 'Lora', serif;">Featured</h5>
+                          <p class="card-location" style="font-family: 'Raleway', sans-serif;">Location</p>
+                          <p class="card-food" style="font-family: 'Raleway', sans-serif;">Food</p>
+                          <p class="card-description" style="font-family: 'Raleway', sans-serif;">Description............</p>
                         </div>
                     </div>
                 </div>
@@ -125,10 +126,10 @@
                     <div class="card h-100" style="width: 18rem; border-radius: 30px">
                         <img src="..." class="card-img-top" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">Featured</h5>
-                          <p class="card-location">Location</p>
-                          <p class="card-food">Food</p>
-                          <p class="card-description">Description............</p>
+                          <h5 class="card-title" style="font-family: 'Lora', serif;">Featured</h5>
+                          <p class="card-location" style ="font-family: 'Raleway', sans-serif;">Location</p>
+                          <p class="card-food" style="font-family: 'Raleway', sans-serif;">Food</p>
+                          <p class="card-description" style="font-family: 'Raleway', sans-serif;">Description............</p>
                         </div>
                     </div>
                 </div>
