Colored drop down menus

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -44,11 +44,11 @@
                         <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" style="border-radius: 10px; font-family: 'Raleway', sans-serif; font-size: 25px">
                           Location
                         </button>
-                        <ul class="dropdown-menu" style="color: #70747c;">
-                          <li ><a class="dropdown-item" href="#"> On campus </a></li>
-                          <li><a class="dropdown-item" href="#"> UTC </a></li>
-                          <li><a class="dropdown-item" href="#"> Campus Plaza </a></li>
-                          <li><a class="dropdown-item" href="#"> Nearby campus </a></li>
+                        <ul class="dropdown-menu" style="background:#70747c;">
+                          <li ><a class="dropdown-item" href="#" style="color:#EFF2F1"> On campus </a></li>
+                          <li><a class="dropdown-item" href="#" style="color:#EFF2F1"> UTC </a></li>
+                          <li><a class="dropdown-item" href="#" style="color:#EFF2F1"> Campus Plaza </a></li>
+                          <li><a class="dropdown-item" href="#" style="color:#EFF2F1"> Nearby campus </a></li>
                         </ul>
                     </div>
                 </div>
@@ -57,10 +57,10 @@
                         <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" style="border-radius: 10px; font-family: 'Raleway', sans-serif; font-size: 25px">
                           Pricing
                         </button>
-                        <ul class="dropdown-menu" id="pricing">
-                          <li><a class="dropdown-item" href="#" id="$"> $ </a></li>
-                          <li><a class="dropdown-item" href="#" id="$$"> $$ </a></li>
-                          <li><a class="dropdown-item" href="#" id="$$$"> $$$ </a></li>
+                        <ul class="dropdown-menu" id="pricing" style="background:#70747c;">
+                          <li><a class="dropdown-item" href="#" id="$" style="color:#EFF2F1"> $ </a></li>
+                          <li><a class="dropdown-item" href="#" id="$$" style="color:#EFF2F1"> $$ </a></li>
+                          <li><a class="dropdown-item" href="#" id="$$$" style="color:#EFF2F1"> $$$ </a></li>
                         </ul>
                     </div>
                 </div>
@@ -69,11 +69,11 @@
                         <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false" style="border-radius: 10px; font-family: 'Raleway', sans-serif; font-size: 25px">
                           Rating
                         </button>
-                        <ul class="dropdown-menu" id="rating">
-                        <li><a class="dropdown-item" href="#" id="2-stars"> 2 stars </a></li>
-                          <li><a class="dropdown-item" href="#" id="3-stars"> 3 stars </a></li>
-                          <li><a class="dropdown-item" href="#" id="4-stars"> 4 stars </a></li>
-                          <li><a class="dropdown-item" href="#" id="5-stars"> 5 stars </a></li>
+                        <ul class="dropdown-menu" id="rating" style="background:#70747c;">
+                        <li><a class="dropdown-item" href="#" id="2-stars" style="color:#EFF2F1"> 2 stars </a></li>
+                          <li><a class="dropdown-item" href="#" id="3-stars" style="color:#EFF2F1"> 3 stars </a></li>
+                          <li><a class="dropdown-item" href="#" id="4-stars" style="color:#EFF2F1"> 4 stars </a></li>
+                          <li><a class="dropdown-item" href="#" id="5-stars" style="color:#EFF2F1"> 5 stars </a></li>
                         </ul>
                     </div>
                 </div>
