--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -24,7 +24,7 @@
             </div>
             
             <div class="col-6 text-right">
-                <p style="font-size:35px; font-family:'Raleway',sans-serif; color:#EFF2F1;">Input Form</p>
+                <p id = "form" style="font-size:35px; font-family:'Raleway',sans-serif; color:#EFF2F1;">Input Form</p>
             </div>
     
         </div>
@@ -138,6 +138,13 @@
     </section>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+    <script>
+        document.getElementById("form").addEventListener("click", function() {
+            var link = "index.html";
+            window.open(link, '_blank');
+        });
+    </script>
 
     <script>
 
