--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -17,14 +17,14 @@
     <header>
         <div class="d-flex align-items-center">
             <div class="col-1">
-                <p style="font-size:30px; font-family:'Raleway',sans-serif; color:#EFF2F1;">AntSource</p>
+                <p style="font-size:40px; font-family:'Raleway',sans-serif; color:#EFF2F1;">AntHill</p>
             </div>
             <div class="col-5">
                 <img src="stuffed_petr.png" width = "100px" height = "100px" alt="Stuffed Petr" >
             </div>
             
             <div class="col-6 text-right">
-                <p style="font-size:25px; font-family:'Raleway',sans-serif; color:#EFF2F1;">Input Form</p>
+                <p id="form" style="font-size:25px; font-family:'Raleway',sans-serif; color:#EFF2F1;">Input Form</p>
             </div>
     
         </div>
@@ -141,8 +141,8 @@
 
     <script>
         document.getElementById("form").addEventListener("click", function() {
-            var link = "index.html";
-            window.open(link, '_blank');
+            var link = "inputform.html";
+            window.location.href = link;
         });
     </script>
 
