--- a/Frontend/inputform.html
+++ b/Frontend/inputform.html
@@ -16,47 +16,42 @@
     <header>
         <div class="d-flex align-items-center">
             <div class="col-1">
-                <p style="font-size:30px; font-family:'Raleway',sans-serif; color:#EFF2F1;">AntSource</p>
+                <p style="font-size:40px; font-family:'Raleway',sans-serif; color:#EFF2F1;">AntHill</p>
             </div>
             <div class="col-5">
                 <img src="stuffed_petr.png" width = "100px" height = "100px" alt="Stuffed Petr" >
             </div>
-            
-            <div class="col-6 text-right">
-                <p style="font-size:25px; font-family:'Raleway',sans-serif; color:#EFF2F1;">Input Form</p>
-            </div>
-    
         </div>
     </header>   
 
     <section>
         <div class="container justify-content-center mt-5">
-            <h2 class="content text-center" style="font-size:25px; font-family:'Raleway',sans-serif">Register Your Booth</h2>
+            <h2 class="content text-center" style="font-size:35px; font-family:'Raleway',sans-serif; color:#EFF2F1;">Register Your Booth</h2>
         </div>
     </section>
 
     <section class="container mt-5" style="width: 40%">
         <div class="input-group mb-4">
-            <div class="col">
-                <p class="d-flex align-items-end"><b>Club Name</b></p>
+            <div class="col align-items-center">
+                <p style="font-family:'Raleway',sans-serif; color:#F4B942"><b>Club Name</b></p>
                 <input type="text" class="form-control" placeholder="Enter name of club/organization..." aria-label="club-name" aria-describedby="basic-addon1">
             </div>
         </div>
         <div class="input-group mb-4">
             <div class="col align-items-center">
-                <p><b>Location</b></p>
+                <p style="font-family:'Raleway',sans-serif; color:#F4B942"><b>Location</b></p>
                 <input type="text" class="form-control" placeholder="Enter location (e.g. Outer Ring Road)..." aria-label="club-name" aria-describedby="basic-addon1">
             </div>
         </div>
         <div class="input-group mb-4">
             <div class="col align-items-center">
-                <p><b>Food</b></p>
+                <p style="font-family:'Raleway',sans-serif; color:#F4B942;"><b>Food</b></p>
                 <input type="text" class="form-control" placeholder="Enter type of food(s)..." aria-label="club-name" aria-describedby="basic-addon1">
             </div>
         </div>
         <div class="input-group mb-4">
             <div class="col align-items-center">
-                <p><b>Description</b></p>
+                <p style="font-family:'Raleway',sans-serif; color:#F4B942;"><b>Description</b></p>
                 <input type="text" class="form-control" placeholder="Enter short description..." aria-label="club-name" aria-describedby="basic-addon1">
             </div>
         </div>
