--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -177,9 +177,13 @@
 
         console.log(filters);
 
+        const queryString = Object.keys(filters).map((key) => `${key}=${encodeURIComponent(filters[key])}`).join("&");
+        const url = "http://localhost:5000/?${queryString}";
+
+        console.log(url)
+
         fetch("http://localhost:5000/", {
-            method: "POST",
-            body: JSON.stringify(filters),
+            method: "GET",
             headers: {
                 "Content-Type": "application/json; charset=UTF-8",
             }
