--- a/Frontend/landing.html
+++ b/Frontend/landing.html
@@ -16,12 +16,11 @@
 <header>
     <div class="d-flex justify-content-between align-items-center">
         <div class="col text-left">
-            <img src="C:\Users\jason\Downloads\VS Project Folder\zothacks-2023\ZotHacks2023\Frontend\stuffed_petr.png" width = "100px" height = "100px" alt="Stuffed Petr">
+            <img src="stuffed_petr.png" width = "100px" height = "100px" alt="Stuffed Petr">
         </div>
-        <div class="col text-right">
-            <p id="form" style="font-size:35px; font-family:'Raleway',sans-serif; color:#EFF2F1;">Input Form</p>
+        <div class="col-6 text-right">
+            <p id="form" style="font-size:25px; font-family:'Raleway',sans-serif; color:#EFF2F1;">Input Form</p>
         </div>
-
     </div>
 </header>
 
@@ -48,14 +47,14 @@
     <script>
         document.getElementById("anthill").addEventListener("click", function() {
             var link = "index.html";
-            window.open(link, '_blank');
+            window.location.href = link;
         });
     </script>
 
     <script>
         document.getElementById("form").addEventListener("click", function() {
-            var link = "index.html";
-            window.open(link, '_blank');
+            var link = "inputform.html";
+            window.location.href = link;
         });
     </script>
 </body>
