--- a/Frontend/inputform.html
+++ b/Frontend/inputform.html
@@ -10,6 +10,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora&family=Raleway&display=swap" rel="stylesheet"> 
     <title>Input Form</title>
+    <style>
+        #form:hover{
+            cursor: pointer;
+            color: rgb(64, 89, 173) !important;
+        }
+    </style>
 </head>
 
 <body style="background-color:#6B9AC4;">
