--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -168,7 +168,7 @@
             $('#location a').on('click', function () {
                 var txt= ($(this).text());
                 filters["location"] = txt;
-                filterquery(filters);
+                console.log(filterquery(filters));
             });
         });
 
